--- a/frontend/app/templates/base.html
+++ b/frontend/app/templates/base.html
@@ -25,6 +25,11 @@
             padding: 0.25rem 0.5rem;
             border-radius: 4px;
         }
+
+        button {
+            margin: 0.1rem;
+        }
+
     </style>
     {% block extra_css %}{% endblock %}
 </head>
