Compute dashboard stats with duckdb

--- a/frontend/app/templates/index.html
+++ b/frontend/app/templates/index.html
@@ -3,6 +3,9 @@
 {% block content %}
 <h1>Welcome to Burgonet Gateway</h1>
 
+{% include "admin/_partial_dashboard.html" %}
+
+
 <div class="mt-4">
     <h2>Your API Tokens</h2>
     <div class="mb-3">
