--- a/www/style.css
+++ b/www/style.css
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - 60px);
+    /*height: calc(100vh - 60px);*/
 }
 
 .logo img {
