--- a/www/style.css
+++ b/www/style.css
@@ -9,6 +9,7 @@ body {
     background-color: #f8f9fa;
     border-bottom: 1px solid #dee2e6;
     width: 100%;
+    height: 60px;
     box-sizing: border-box;
     position: fixed;
     top: 0;
@@ -31,6 +32,7 @@ body {
     border: 1px solid #dee2e6;
     border-radius: 4px;
     margin-left: 20px;
+    margin-right: 20px;
     width: 200px;
     height: 25px;
     font-size: 12px;
